OHRI-555: Remove 'Encounters Summary' dashboard

--- a/src/ohri-patient-dashboards-config.json
+++ b/src/ohri-patient-dashboards-config.json
@@ -15,7 +15,8 @@
           "notes-summary-dashboard",
           "programs-summary-dashboard",
           "results-summary-dashboard",
-          "test-results-summary-dashboard"
+          "test-results-summary-dashboard",
+          "encounters-summary-dashboard"
         ]
       }
     }
