--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -148,3 +148,20 @@ jobs:
             privateKey: ${{ secrets.HISTAC_KEY}}
             port: ${{ secrets.HISTAC_PORT }}
 
+  sandbox_demo:
+    runs-on: ubuntu-latest
+
+    needs: pre_demo
+
+    if: startsWith(github.ref, 'refs/tags/v')
+
+    steps:
+      # Update the Microfrontends to reflect what we have in the Working branch
+      - uses: garygrossgarten/github-action-ssh@release
+        name: Run the Update MicroFronEnd Script
+        with:
+          command: cd /usr/share/tomcat/microfrontends/test && sh update_microfrontends.sh
+          host: ${{ secrets.SANDBOX_HOST }}
+          username: ${{ secrets.SANDBOX_USERNAME }}
+          privateKey: ${{ secrets.SANDBOX_KEY}}
+          port: ${{ secrets.SANDBOX_PORT }}
