--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -129,11 +129,28 @@ jobs:
             username: ${{ secrets.HISTAC_USERNAME }}
             privateKey: ${{ secrets.HISTAC_KEY}}
             port: ${{ secrets.HISTAC_PORT }}
+            
+  pre_demo_export_concepts:
+    runs-on: ubuntu-latest
+
+    needs: pre_demo
+
+    if: startsWith(github.ref, 'refs/tags/v')
+
+    steps:
+      - uses: garygrossgarten/github-action-ssh@release
+        name: Run iniz-exporters script to export concepts to csv file.
+        with:
+            command: cd /usr/share/tomcat/iniz-exporters/concepts && rm -f concepts.csv && /bin/bash run.sh -u ${{ secrets.HISTAC_DEV_DB_USER }} -p ${{ secrets.HISTAC_DEV_DB_PASSWORD }} -o concepts.csv openmrs_dev
+            host: ${{ secrets.HISTAC_HOST }}
+            username: ${{ secrets.HISTAC_USERNAME }}
+            privateKey: ${{ secrets.HISTAC_KEY}}
+            port: ${{ secrets.HISTAC_PORT }}
 
   demo:
     runs-on: ubuntu-latest
 
-    needs: pre_demo
+    needs: pre_demo_export_concepts
 
     if: startsWith(github.ref, 'refs/tags/v')
 
@@ -151,7 +168,7 @@ jobs:
   sandbox_demo:
     runs-on: ubuntu-latest
 
-    needs: pre_demo
+    needs: pre_demo_export_concepts
 
     if: startsWith(github.ref, 'refs/tags/v')
 
