--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "yup": "^0.29.1"
   },
   "peerDependencies": {
-    "@openmrs/esm-framework": "3.x",
+    "@openmrs/esm-framework": "3.2.1-pre.986",
     "@openmrs/esm-patient-common-lib": "3.x",
     "carbon-components": "^10.19.0",
     "carbon-icons": "^7.0.7",
