--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.12.13",
-    "@openmrs/esm-framework": "next",
+    "@openmrs/esm-framework": "^3.2.1-pre.1015",
+    "@openmrs/esm-patient-common-lib": "next",
     "@testing-library/dom": "^7.20.0",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
@@ -119,7 +120,7 @@
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "node-sass": "^6.0.1",
-    "openmrs": "next",
+    "openmrs": "^3.2.1-pre.1015",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
@@ -130,13 +131,12 @@
     "rxjs": "^6.6.2",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.0.0",
+    "swr": "^1.1.2",
     "typescript": "^4.0.3",
     "unistore": "^3.5.2",
     "webpack": "^5.37.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^4.2.1",
-    "swr": "^1.1.2",
-    "@openmrs/esm-patient-common-lib": "next"
+    "webpack-dev-server": "^4.2.1"
   }
 }
