OHRI-640: Configure encounter widget to pickup notes

--- a/src/ohri-patient-dashboards-config.json
+++ b/src/ohri-patient-dashboards-config.json
@@ -9,11 +9,11 @@
            "programs-summary-dashboard",
            "allergies-summary-dashboard",
            "attachments-results-summary-dashboard",
-           "drug-orders-summary-dashboard",
-           "encounters-summary-dashboard"
+           "drug-orders-summary-dashboard"
         ]
       }
-    }
+    },
+    "notesConceptUuids": ["161011AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"]
   },
   "@openmrs/esm-patient-banner-app": {
     "extensionSlots": {
