--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "url": "https://github.com/UCSF-IGHS/openmrs-esm-ohri/issues"
   },
   "dependencies": {
-    "@carbon/icons-react": "^10.18.0",
+    "@carbon/icons-react": "^10.49.0",
     "ace-builds": "^1.4.12",
-    "carbon-components-react": "^7.25.0",
+    "carbon-components-react": "^7.56.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "formik": "^2.2.6",
@@ -77,11 +77,11 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime": "^7.12.13",
-    "@openmrs/esm-framework": "^3.2.1-pre.1015",
-    "@openmrs/esm-patient-common-lib": "next",
+    "@babel/runtime": "^7.17.8",
+    "@openmrs/esm-framework": "^3.2.1-pre.1055",
+    "@openmrs/esm-patient-common-lib": "^3.1.1-pre.1346",
     "@testing-library/dom": "^7.20.0",
-    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^10.4.3",
     "@testing-library/user-event": "^12.0.11",
     "@types/carbon-components-react": "^7.36.1",
@@ -97,10 +97,10 @@
     "@typescript-eslint/parser": "^4.26.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.2.4",
     "babel-preset-minify": "^0.5.1",
     "browserslist-config-openmrs": "^1.0.0",
-    "carbon-components": "^10.19.0",
+    "carbon-components": "^10.56.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^6.3.0",
     "css-loader": "^3.2.0",
@@ -120,19 +120,19 @@
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "node-sass": "^6.0.1",
-    "openmrs": "^3.2.1-pre.1015",
+    "openmrs": "^3.2.1-pre.1055",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-i18next": "^11.3.4",
+    "react-i18next": "^11.16.2",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "rxjs": "^6.6.2",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.0.0",
     "swr": "^1.1.2",
-    "typescript": "^4.0.3",
+    "typescript": "^4.6.3",
     "unistore": "^3.5.2",
     "webpack": "^5.37.0",
     "webpack-bundle-analyzer": "^4.4.0",
