fix file import paths

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "coverage": "yarn test --coverage",
     "extract-translations": "lerna run extract-translations",
     "prettier": "prettier --config prettier.config.js --write \"packages/**/*.{ts,tsx}\"",
-    "start": "openmrs develop --backend https://ohri-working.globalhealthapp.net --sources 'packages/esm-*-app/'",
-    "start:covid": "openmrs develop --sources packages/esm-covid-app --backend https://ohri-working.globalhealthapp.net",
-    "start:hiv": "openmrs develop --sources packages/esm-hiv-app --backend https://ohri-working.globalhealthapp.net",
-    "start:forms": "openmrs develop --sources packages/esm-form-render-app --backend https://ohri-working.globalhealthapp.net",
+    "start": "openmrs develop --backend https://ohri-demo.globalhealthapp.net --sources 'packages/esm-*-app/'",
+    "start:covid": "openmrs develop --sources packages/esm-covid-app --backend https://ohri-demo.globalhealthapp.net",
+    "start:hiv": "openmrs develop --sources packages/esm-hiv-app --backend https://ohri-demo.globalhealthapp.net",
+    "start:forms": "openmrs develop --sources packages/esm-form-render-app --backend https://ohri-demo.globalhealthapp.net",
     "test": "jest --config jest.config.json --verbose false --passWithNoTests",
     "test-watch": "jest --watch --config jest.config.json",
     "verify": "lerna run lint && lerna run test && lerna run typescript"
