--- a/packages/esm-hiv-app/package.json
+++ b/packages/esm-hiv-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openmrs-ohri-app",
+  "name": "openmrs-esm-ohri-hiv-app",
   "version": "0.6.24",
   "description": "A custom microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-ohri-app.js",
