--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -19,8 +19,12 @@
     "coverage": "npm test -- --coverage",
     "badges": "npm run coverage && jest-coverage-badges --output './badges' "
   },
-  "browserslist": ["extends browserslist-config-openmrs"],
-  "keywords": ["openmrs"],
+  "browserslist": [
+    "extends browserslist-config-openmrs"
+  ],
+  "keywords": [
+    "openmrs"
+  ],
   "publishConfig": {
     "access": "public"
   },
@@ -38,6 +42,7 @@
   },
   "dependencies": {
     "@carbon/icons-react": "^10.18.0",
+    "@openmrs/esm-patient-common-lib": "^3.1.0",
     "ace-builds": "^1.4.12",
     "carbon-components-react": "^7.25.0",
     "enzyme": "^3.11.0",
@@ -46,6 +51,7 @@
     "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
+    "openmrs-ohri-form-engine-lib": "^0.1.3",
     "react-ace": "^9.4.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-markdown": "^7.1.0",
