--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: working CI
 
 on:
   push:
@@ -15,10 +15,6 @@ on:
     types:
       - created
 
-env:
-  ESM_NAME: "openmrs-ohri-app"
-  JS_NAME: "openmrs-ohri-app.js"
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,23 +24,71 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: "16.x"
-      - run: npm install
+          node-version: '16.x'
+      - run: npx lerna bootstrap
       - run: npm run lint
-      - run: npm run build --if-present
+      - run: npm run build
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: dist
+          name: packages
           path: |
-            dist
+            packages/**/dist
 
-  deploy:
+  pre_release:
     runs-on: ubuntu-latest
 
-    needs: pre_release
+    needs: build
 
-    if: ${{ github.ref == 'refs/heads/dev' }}
+    if: ${{ github.event_name == 'push' }}
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14'
+          registry-url: 'https://registry.npmjs.org'
+      - run: npx lerna bootstrap
+      - run: npx lerna run build
+      - run: npx lerna version patch --no-git-tag-version --no-push --yes
+      - run: npx lerna version "$(node -e "console.log(require('./lerna.json').version)")-pre.${{ github.run_number }}" --no-git-tag-version --yes
+      - run: git add . && git commit -m "Prerelease version" --no-verify
+      - run: npm run ci:prepublish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+  release:
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    if: ${{ github.event_name == 'release' }}
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14'
+          registry-url: 'https://registry.npmjs.org'
+      - run: npx lerna bootstrap
+      - run: npx lerna run build
+      - run: npm run ci:publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+  deploy_ohri_core_app:
+    runs-on: ubuntu-latest
+
+    env:
+      DIR_NAME: 'esm-ohri-core-app'
+      ESM_NAME: 'openmrs-esm-ohri-core-app'
+      JS_NAME: 'openmrs-esm-ohri-core-app.js'
+
+    needs: build
+
+    if: ${{ github.event_name == 'push' }}
 
     steps:
       - name: Download Artifacts
@@ -67,117 +111,143 @@ jobs:
 
             port: ${{ secrets.HISTAC_PORT }}
 
-  pre_release:
+  deploy_ohri_hiv_app:
     runs-on: ubuntu-latest
+
+    env:
+      DIR_NAME: 'esm-ohri-hiv-app'
+      ESM_NAME: 'openmrs-esm-ohri-hiv-app'
+      JS_NAME: 'openmrs-esm-ohri-hiv-app.js'
 
     needs: build
 
     if: ${{ github.event_name == 'push' }}
 
     steps:
-      - uses: actions/checkout@v2
       - name: Download Artifacts
         uses: actions/download-artifact@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
+      - name: Compute Timestamp
+        run: echo "TIMESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+      - name: Prepare Directory
+        shell: bash
+        run: |
+          mkdir -p dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}
+          mv packages/${{ env.DIR_NAME }}/dist/*.* dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/
+      - name: Publish to Digital Ocean
+        uses: jakejarvis/s3-sync-action@master
         with:
-          node-version: "16.x"
-          registry-url: "https://registry.npmjs.org"
-      - run: npm install
-      - run: sed -i -e "s/\(\"version\":\\s\+\"\([0-9]\+\.\?\)\+\)/\1-pre.${{ github.run_number }}/" 'package.json'
-      - run: npm run build --if-present
-      - run: npm publish --access public --tag next
+          args: --acl public-read --follow-symlinks --cache-control "max-age=31536000"
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          AWS_S3_BUCKET: ${{ secrets.DIGITAL_OCEAN_SPACES_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.DIGITAL_OCEAN_SPACES_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.DIGITAL_OCEAN_SPACES_ACCESS_KEY }}
+          AWS_S3_ENDPOINT: ${{ secrets.DIGITAL_OCEAN_SPACES_ENDPOINT }}
+          SOURCE_DIR: 'dist'
+      - name: Update Importmap
+        uses: fjogeleit/http-request-action@master
+        with:
+          url: http://${{ secrets.DEPLOYER_HOST }}/services?env=prod
+          method: 'PATCH'
+          username: ${{ secrets.DEPLOYER_USERNAME }}
+          password: ${{ secrets.DEPLOYER_PASSWORD }}
+          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://spa-modules.nyc3.digitaloceanspaces.com/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
+          customHeaders: '{ "Accept": "application/json", "Content-Type": "application/json" }'
 
-  pre_demo:
+  deploy_ohri_covid_app:
     runs-on: ubuntu-latest
+
+    env:
+      DIR_NAME: 'esm-ohri-covid-app'  
+      ESM_NAME: 'openmrs-esm-ohri-covid-app'
+      JS_NAME: 'openmrs-esm-ohri-covid-app.js'
 
     needs: build
 
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: ${{ github.event_name == 'push' }}
 
     steps:
-      - uses: actions/checkout@v2
+          - name: Download Artifacts
+            uses: actions/download-artifact@v2
+          - name: Compute Timestamp
+            run: echo "TIMESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+          - name: Prepare Directory
+            shell: bash
+            run: |
+              mkdir -p dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}
+              mv dist/*.* dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/
+              # Runs a set of commands using the runners shell
+          - uses: garygrossgarten/github-action-ssh@release
+            name: Run the Update MicroFronEnd Script
+            with:
+                command: cd /usr/share/tomcat/microfrontends/dev && /bin/bash update_microfrontends.sh
+                host: ${{ secrets.HISTAC_HOST }}
+                username: ${{ secrets.HISTAC_USERNAME }}
+                privateKey: ${{ secrets.HISTAC_KEY}}
+
+                port: ${{ secrets.HISTAC_PORT }}
+
+  deploy_ohri_form_render_app:
+    runs-on: ubuntu-latest
+
+    env:
+      DIR_NAME: 'esm-ohri-form-render-app'
+      ESM_NAME: 'openmrs-esm-ohri-form-render-app'
+      JS_NAME: 'openmrs-esm-ohri-form-render-app.js'
+
+    needs: build
+
+    if: ${{ github.event_name == 'push' }}
+
+    steps:
       - name: Download Artifacts
         uses: actions/download-artifact@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: "16.x"
-          registry-url: "https://registry.npmjs.org"
-      - run: npm install
-      - run: sed -i -e "s/\(\"version\":\\s\+\"\([0-9]\+\.\?\)\+\)/\1-pre.${{ github.run_number }}/" 'package.json'
-      - run: npm publish --access public --tag latest
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-
-  working:
-    runs-on: ubuntu-latest
-
-    needs: pre_release
-
-    if: ${{ github.ref == 'refs/heads/working' }}
-
-    steps:
-      # Update the Microfrontends to reflect what we have in the Working branch
+      - name: Compute Timestamp
+        run: echo "TIMESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+      - name: Prepare Directory
+        shell: bash
+        run: |
+          mkdir -p dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}
+          mv dist/*.* dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/
+          # Runs a set of commands using the runners shell
       - uses: garygrossgarten/github-action-ssh@release
         name: Run the Update MicroFronEnd Script
         with:
-            command: cd /usr/share/tomcat/microfrontends/working && sh update_microfrontends.sh
+            command: cd /usr/share/tomcat/microfrontends/dev && /bin/bash update_microfrontends.sh
             host: ${{ secrets.HISTAC_HOST }}
             username: ${{ secrets.HISTAC_USERNAME }}
             privateKey: ${{ secrets.HISTAC_KEY}}
-            port: ${{ secrets.HISTAC_PORT }}
-            
-  pre_demo_export_concepts:
-    runs-on: ubuntu-latest
 
-    needs: pre_demo
-
-    if: startsWith(github.ref, 'refs/tags/v')
-
-    steps:
-      - uses: garygrossgarten/github-action-ssh@release
-        name: Run iniz-exporters script to export concepts to csv file.
-        with:
-            command: cd /usr/share/tomcat/iniz-exporters/concepts && rm -f concepts.csv && /bin/bash run.sh -u ${{ secrets.HISTAC_DEV_DB_USER }} -p ${{ secrets.HISTAC_DEV_DB_PASSWORD }} -o concepts.csv openmrs_dev
-            host: ${{ secrets.HISTAC_HOST }}
-            username: ${{ secrets.HISTAC_USERNAME }}
-            privateKey: ${{ secrets.HISTAC_KEY}}
             port: ${{ secrets.HISTAC_PORT }}
 
-  demo:
+  deploy_ohri_common_lib:
     runs-on: ubuntu-latest
 
-    needs: pre_demo_export_concepts
+    env:
+      DIR_NAME: 'esm-ohri-comm-lib'
+      ESM_NAME: 'openmrs-esm-ohri-comm-lib'
+      JS_NAME: 'openmrs-esm-ohri-comm-lib.js'
 
-    if: startsWith(github.ref, 'refs/tags/v')
+    needs: build
+
+    if: ${{ github.event_name == 'push' }}
 
     steps:
-      # Update the Microfrontends to reflect what we have in the Working branch
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+      - name: Compute Timestamp
+        run: echo "TIMESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+      - name: Prepare Directory
+        shell: bash
+        run: |
+          mkdir -p dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}
+          mv dist/*.* dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/
+          # Runs a set of commands using the runners shell
       - uses: garygrossgarten/github-action-ssh@release
         name: Run the Update MicroFronEnd Script
         with:
-            command: cd /usr/share/tomcat/microfrontends/test && sh update_microfrontends.sh
+            command: cd /usr/share/tomcat/microfrontends/dev && /bin/bash update_microfrontends.sh
             host: ${{ secrets.HISTAC_HOST }}
             username: ${{ secrets.HISTAC_USERNAME }}
             privateKey: ${{ secrets.HISTAC_KEY}}
+
             port: ${{ secrets.HISTAC_PORT }}
-
-  sandbox_demo:
-    runs-on: ubuntu-latest
-
-    needs: pre_demo_export_concepts
-
-    if: startsWith(github.ref, 'refs/tags/v')
-
-    steps:
-      # Update the Microfrontends to reflect what we have in the Working branch
-      - uses: garygrossgarten/github-action-ssh@release
-        name: Run the Update MicroFronEnd Script
-        with:
-          command: cd /usr/share/tomcat/microfrontends/ && /bin/bash update_microfrontends.sh
-          host: ${{ secrets.SANDBOX_HOST }}
-          username: ${{ secrets.SANDBOX_USERNAME }}
-          privateKey: ${{ secrets.SANDBOX_KEY}}
