--- a/packages/esm-hiv-app/package.json
+++ b/packages/esm-hiv-app/package.json
@@ -2,7 +2,7 @@
   "name": "openmrs-esm-ohri-hiv-app",
   "version": "0.6.24",
   "description": "A custom microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
-  "browser": "dist/openmrs-ohri-app.js",
+  "browser": "dist/openmrs-esm-ohri-hiv-app.js",
   "main": "src/index.ts",
   "license": "MIT",
   "homepage": "https://github.com/UCSF-IGHS/openmrs-esm-ohri#readme",
