--- a/packages/esm-cervical-cancer-app/package.json
+++ b/packages/esm-cervical-cancer-app/package.json
@@ -1,15 +1,12 @@
 {
   "name": "openmrs-esm-ohri-cervical-cancer-app",
   "version": "0.6.24",
-  "description": "A custom microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
-  "browser": "dist/openmrs-ohri-app.js",
+  "description": "A custom microfrontend for cervical cancer for OpenMRS HIV Reference Implementation (OHRI)",
+  "browser": "dist/openmrs-esm-ohri-cervical-cancer-app.js",
   "main": "src/index.ts",
   "license": "MIT",
   "homepage": "https://github.com/UCSF-IGHS/openmrs-esm-ohri#readme",
   "scripts": {
-    "start": "openmrs develop",
-    "serve": "webpack serve --mode=development",
-    "debug": "npm run serve",
     "build": "webpack --mode production",
     "analyze": "webpack --mode=production --env.analyze=true",
     "lint": "eslint src --ext tsx",
