--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
       - run: npx lerna run lint -- --fix
       - run: npx lerna run build 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v2x
+        uses: actions/upload-artifact@v2
         with:
           name: packages
           path: |
@@ -61,7 +61,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
 
-    needs: build
+    needs: pre_release
 
     if: ${{ github.event_name == 'release' }}
 
@@ -87,7 +87,7 @@ jobs:
       ESM_NAME: 'openmrs-esm-ohri-core-app'
       JS_NAME: 'openmrs-esm-ohri-core-app.js'
 
-    needs: build
+    needs: release
 
     if: ${{ github.event_name == 'push' }}
 
@@ -120,7 +120,7 @@ jobs:
       ESM_NAME: 'openmrs-esm-ohri-hiv-app'
       JS_NAME: 'openmrs-esm-ohri-hiv-app.js'
 
-    needs: build
+    needs: release
 
     if: ${{ github.event_name == 'push' }}
 
@@ -153,7 +153,7 @@ jobs:
       ESM_NAME: 'openmrs-esm-ohri-covid-app'
       JS_NAME: 'openmrs-esm-ohri-covid-app.js'
 
-    needs: build
+    needs: release
 
     if: ${{ github.event_name == 'push' }}
 
@@ -186,7 +186,7 @@ jobs:
       ESM_NAME: 'openmrs-esm-ohri-form-render-app'
       JS_NAME: 'openmrs-esm-ohri-form-render-app.js'
 
-    needs: build
+    needs: release
 
     if: ${{ github.event_name == 'push' }}
 
