--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,9 +48,9 @@ jobs:
         with:
           node-version: '14'
           registry-url: 'https://registry.npmjs.org'
-      - run: npx lerna bootstrap
-      - run: npx lerna version patch --no-git-tag-version --no-push --yes
-      - run: npx lerna version "$(node -e "console.log(require('./lerna.json').version)")-pre.${{ github.run_number }}" --no-git-tag-version --yes
+      - run: npx lerna bootstrap 
+      - run: yarn lerna version patch --no-git-tag-version --no-push --yes
+      - run: yarn lerna version "$(node -e "console.log(require('./lerna.json').version)")-pre.${{ github.run_number }}" --no-git-tag-version --yes
       - run: git add . && git commit -m "Prerelease version" --no-verify
       - run: yarn run ci:publish-next
         env:
