--- a/lerna.json
+++ b/lerna.json
@@ -4,10 +4,10 @@
   ],
   "npmClient": "yarn",
   "useWorkspaces": true,
+  "version": "0.6.31",
   "command": {
     "publish": {
       "verifyAccess": false
     }
-  },
-  "version": "independent"
+  } 
 }
