--- a/packages/esm-form-render-app/package.json
+++ b/packages/esm-form-render-app/package.json
@@ -2,10 +2,13 @@
   "name": "openmrs-esm-ohri-form-render-app",
   "version": "0.1.3",
   "description": "A Forms Rendering microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
+  "browser": "dist/openmrs-esm-ohri-form-render-app.js",
+  "main": "src/index.ts",
+  "license": "MIT",
+  "homepage": "https://github.com/UCSF-IGHS/openmrs-esm-ohri#readme",
   "keywords": [
     "openmrs"
   ],
-  "homepage": "https://github.com/UCSF-IGHS/openmrs-esm-ohri-forms#readme",
   "bugs": {
     "url": "https://github.com/UCSF-IGHS/openmrs-esm-ohri/issues"
   },
@@ -13,9 +16,6 @@
     "type": "git",
     "url": "git+https://github.com/UCSF-IGHS/openmrs-esm-ohri.git"
   },
-  "license": "MIT",
-  "main": "src/index.ts",
-  "browser": "dist/forms-render-app.js",
   "scripts": {
     "analyze": "webpack --mode=production --env.analyze=true",
     "badges": "npm run coverage && jest-coverage-badges --output './badges' ",
@@ -51,7 +51,6 @@
     "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
-    "openmrs-ohri-form-engine-lib": "0.1.2",
     "react-ace": "^9.4.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-markdown": "^7.1.0",
@@ -63,28 +62,6 @@
     "yup": "^0.29.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime": "^7.12.13",
-    "@openmrs/esm-framework": "next",
-    "@testing-library/dom": "^7.20.0",
-    "@testing-library/jest-dom": "^5.11.0",
-    "@testing-library/react": "^10.4.3",
-    "@testing-library/user-event": "^12.0.11",
-    "@types/carbon-components-react": "^7.36.1",
-    "@types/jest": "^24.9.1",
-    "@types/lodash": "^4.14.161",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router": "^5.1.7",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/single-spa-react": "^2.12.0",
-    "@types/webpack-env": "^1.15.1",
-    "@types/yup": "^0.29.3",
-    "@typescript-eslint/parser": "^4.26.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
@@ -108,6 +85,7 @@
     "jest-cli": "^24.9.0",
     "node-sass": "^6.0.1",
     "openmrs": "next",
+    "openmrs-ohri-form-engine-lib": "^0.1.4",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
