--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -85,7 +85,7 @@ jobs:
   working:
       runs-on: ubuntu-latest
 
-      needs: release
+      needs: pre_release
 
       if: ${{ github.ref == 'refs/heads/working' }}
 
