--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -94,8 +94,88 @@ jobs:
         - uses: garygrossgarten/github-action-ssh@release
           name: Run the Update MicroFronEnd Script
           with:
-              command: cd /usr/share/tomcat/microfrontends/working && sh update_microfrontends.sh
+              command: cd /usr/share/tomcat/microfrontends/working && /bin/bash update_microfrontends.sh
               host: ${{ secrets.HISTAC_HOST }}
               username: ${{ secrets.HISTAC_USERNAME }}
               privateKey: ${{ secrets.HISTAC_KEY}}
               port: ${{ secrets.HISTAC_PORT }}
+
+  dev:
+    runs-on: ubuntu-latest
+
+    needs: pre_release
+
+    if: ${{ github.ref == 'refs/heads/dev' }}
+
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+      - name: Compute Timestamp
+        run: echo "TIMESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+      - name: Prepare Directory
+        shell: bash
+        run: |
+          mkdir -p dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}
+          mv dist/*.* dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/
+          # Runs a set of commands using the runners shell
+      - uses: garygrossgarten/github-action-ssh@release
+        name: Run the Update MicroFronEnd Script
+        with:
+            command: cd /usr/share/tomcat/microfrontends/dev && /bin/bash update_microfrontends.sh
+            host: ${{ secrets.HISTAC_HOST }}
+            username: ${{ secrets.HISTAC_USERNAME }}
+            privateKey: ${{ secrets.HISTAC_KEY}}
+
+            port: ${{ secrets.HISTAC_PORT }}
+
+  pre_demo_export_concepts:
+      runs-on: ubuntu-latest
+
+      needs: pre_demo
+
+      if: startsWith(github.ref, 'refs/tags/v')
+
+      steps:
+        - uses: garygrossgarten/github-action-ssh@release
+          name: Run iniz-exporters script to export concepts to csv file.
+          with:
+              command: cd /usr/share/tomcat/iniz-exporters/concepts && rm -f concepts.csv && /bin/bash run.sh -u ${{ secrets.HISTAC_DEV_DB_USER }} -p ${{ secrets.HISTAC_DEV_DB_PASSWORD }} -o concepts.csv openmrs_dev
+              host: ${{ secrets.HISTAC_HOST }}
+              username: ${{ secrets.HISTAC_USERNAME }}
+              privateKey: ${{ secrets.HISTAC_KEY}}
+              port: ${{ secrets.HISTAC_PORT }}
+
+  demo:
+    runs-on: ubuntu-latest
+
+    needs: pre_demo_export_concepts
+
+    if: startsWith(github.ref, 'refs/tags/v')
+
+    steps:
+      # Update the Microfrontends to reflect what we have in the Working branch
+      - uses: garygrossgarten/github-action-ssh@release
+        name: Run the Update MicroFronEnd Script
+        with:
+            command: cd /usr/share/tomcat/microfrontends/test && sh update_microfrontends.sh
+            host: ${{ secrets.HISTAC_HOST }}
+            username: ${{ secrets.HISTAC_USERNAME }}
+            privateKey: ${{ secrets.HISTAC_KEY}}
+            port: ${{ secrets.HISTAC_PORT }}
+
+  sandbox_demo:
+    runs-on: ubuntu-latest
+
+    needs: pre_demo_export_concepts
+
+    if: startsWith(github.ref, 'refs/tags/v')
+
+    steps:
+      # Update the Microfrontends to reflect what we have in the Working branch
+      - uses: garygrossgarten/github-action-ssh@release
+        name: Run the Update MicroFronEnd Script
+        with:
+          command: cd /usr/share/tomcat/microfrontends/ && /bin/bash update_microfrontends.sh
+          host: ${{ secrets.SANDBOX_HOST }}
+          username: ${{ secrets.SANDBOX_USERNAME }}
+          privateKey: ${{ secrets.SANDBOX_KEY}}
