--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -128,6 +128,29 @@ jobs:
 
             port: ${{ secrets.HISTAC_PORT }}
 
+  pre_demo:
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    if: startsWith(github.ref, 'refs/tags/v')
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: "16.x"
+          registry-url: "https://registry.npmjs.org"
+      - run: npm install
+      - run: sed -i -e "s/\(\"version\":\\s\+\"\([0-9]\+\.\?\)\+\)/\1-pre.${{ github.run_number }}/" 'package.json'
+      - run: npm publish --access public --tag latest
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+
   pre_demo_export_concepts:
       runs-on: ubuntu-latest
 
