Add lerna config to pre_demo

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -138,12 +138,10 @@ jobs:
         with:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
-      - run: npm install
-      - run: sed -i -e "s/\(\"version\":\\s\+\"\([0-9]\+\.\?\)\+\)/\1-pre.${{ github.run_number }}/" 'package.json'
-      - run: npm publish --access public --tag latest
+      - run: npx lerna bootstrap
+      - run: yarn run ci:publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-
 
   pre_demo_export_concepts:
       runs-on: ubuntu-latest
