--- a/package.json
+++ b/package.json
@@ -29,14 +29,13 @@
     "@carbon/icons-react": "^10.49.0",
     "ace-builds": "^1.4.14",
     "carbon-components-react": "^7.56.0",
-    "engine-lib": "0.1.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "formik": "^2.2.6",
     "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.3",
-    "openmrs-ohri-form-engine-lib": "^0.1.3",
+    "openmrs-ohri-form-engine-lib": "next",
     "react-ace": "^9.4.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-markdown": "^7.1.0",
