--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.3",
-    "openmrs-ohri-form-engine-lib": "next",
+    "openmrs-ohri-form-engine-lib": "0.1.7",
     "react-ace": "^9.4.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-markdown": "^7.1.0",
