--- a/packages/esm-cervical-cancer-app/package.json
+++ b/packages/esm-cervical-cancer-app/package.json
@@ -48,7 +48,7 @@
     "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
-    "openmrs-esm-ohri-commons-lib": "^0.6.39",
+    "openmrs-esm-ohri-commons-lib": "next",
     "react-ace": "^9.4.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-markdown": "^7.1.0",
