--- a/packages/esm-cervical-cancer-app/package.json
+++ b/packages/esm-cervical-cancer-app/package.json
@@ -136,5 +136,6 @@
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.2.1"
-  }
+  },
+  "gitHead": "2f68c59e3e4c2f94681f9c8512fc2424f1e6f4fc"
 }
