--- a/packages/esm-ohri-core-app/package.json
+++ b/packages/esm-ohri-core-app/package.json
@@ -72,5 +72,6 @@
   },
   "devDependencies": {
     "@openmrs/esm-patient-common-lib": "^3.1.1-pre.1346"
-  }
+  },
+  "gitHead": "2f68c59e3e4c2f94681f9c8512fc2424f1e6f4fc"
 }
