--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,8 +49,8 @@ jobs:
           node-version: '14'
           registry-url: 'https://registry.npmjs.org'
       - run: npx lerna bootstrap 
-      - run: yarn lerna version patch --no-git-tag-version --no-push --yes
-      - run: yarn lerna version "$(node -e "console.log(require('./lerna.json').version)")-pre.${{ github.run_number }}" --no-git-tag-version --yes
+      - run: npx lerna version patch --no-git-tag-version --no-push --yes
+      - run: npx lerna version "$(node -e "console.log(require('./lerna.json').version)")-pre.${{ github.run_number }}" --no-git-tag-version --yes
       - name: setup git config
         run: |
           git config user.name "GitHub Actions Bot"
@@ -59,7 +59,7 @@ jobs:
         run: |
           git add .
           git commit -m "Prerelease version" --no-verify  
-      - run: yarn run ci:publish-next
+      - run: npx run ci:publish-next
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
@@ -78,7 +78,7 @@ jobs:
           node-version: '14'
           registry-url: 'https://registry.npmjs.org'
       - run: npx lerna bootstrap
-      - run: yarn run ci:publish
+      - run: npx run ci:publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
@@ -139,7 +139,7 @@ jobs:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
       - run: npx lerna bootstrap
-      - run: yarn run ci:publish
+      - run: npx run ci:publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
