--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -71,5 +71,6 @@
   },
   "devDependencies": {
     "@openmrs/esm-patient-common-lib": "^3.1.1-pre.1346"
-  }
+  },
+  "gitHead": "bfe87ac395026f934703454cc8b483dfbc483e02"
 }
