--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "coverage": "yarn test --coverage",
     "extract-translations": "lerna run extract-translations",
     "prettier": "prettier --config prettier.config.js --write \"packages/**/*.{ts,tsx}\"",
-    "start": "openmrs develop --backend https://ohri-demo.globalhealthapp.net --sources 'packages/esm-*-app/'",
-    "start:core": "openmrs develop --backend https://ohri-demo.globalhealthapp.net --sources packages/esm-ohri-core-app",
-    "start:covid": "openmrs develop --backend https://ohri-demo.globalhealthapp.net --sources packages/esm-covid-app",
-    "start:hiv": "openmrs develop --backend https://ohri-demo.globalhealthapp.net --sources packages/esm-hiv-app",
-    "start:cervical-cancer": "openmrs develop --backend https://ohri-demo.globalhealthapp.net --sources packages/esm-cervical-cancer-app",
-    "start:form-render": "openmrs develop --backend https://ohri-demo.globalhealthapp.net --sources packages/esm-form-render-app",
+    "start": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources 'packages/esm-*-app/'",
+    "start:core": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-ohri-core-app",
+    "start:covid": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-covid-app",
+    "start:hiv": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-hiv-app",
+    "start:cervical-cancer": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-cervical-cancer-app",
+    "start:form-render": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-form-render-app",
     "test": "jest --config jest.config.json --verbose false --passWithNoTests",
     "test-watch": "jest --watch --config jest.config.json",
     "verify": "lerna run lint && lerna run test && lerna run typescript",
