Update package name

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "openmrs-ohri-app",
+  "name": "@ohri/openmrs-ohri-app",
   "private": true,
   "description": "OHRI MicroFrontend for OpenMRS SPA",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "ci:prepublish": "lerna publish from-package --no-git-reset --yes --dist-tag next",
     "ci:prerelease": "lerna version prerelease --no-git-tag-version --yes",
@@ -19,6 +21,7 @@
     "start:form-render": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-form-render-app",
     "test": "jest --config jest.config.json --verbose false --passWithNoTests",
     "test-watch": "jest --watch --config jest.config.json",
+    "prepare": "husky install",
     "verify": "lerna run lint && lerna run test && lerna run typescript",
     "ci:publish-next": "lerna publish from-package --no-git-reset --dist-tag next --yes",
     "ci:publish-next-patch": "lerna version patch && lerna publish from-package --no-git-reset --dist-tag next --yes",
