Fix failed YAML validation, comment cache

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,14 +23,14 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-          cache: 'npm'
-          cache-dependency-path: subdir/package-lock.json 
-      - name: restore lerna cache
-        uses: actions/cache@v3
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          node-version: "16.x"
+      #     cache: 'npm'
+      #     cache-dependency-path: subdir/package-lock.json 
+      # - name: restore lerna cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: '**/node_modules'
+      #     key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       - run: npx lerna bootstrap
       - run: npx lerna run lint -- --fix
       - name: Upload Artifacts
@@ -48,17 +48,18 @@ jobs:
     if: ${{ github.event_name == 'push' }}
 
     steps:
-      - name: restore lerna cache
-        uses: actions/cache@v3
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+      # Cache to be implemented on next CI change
+      # - name: restore lerna cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: '**/node_modules'
+      #     key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 15
-          cache: 'npm'
-          cache-dependency-path: subdir/package-lock.json
+          node-version: "16.x"
+          # cache: 'npm'
+          # cache-dependency-path: subdir/package-lock.json
       - run: npm ci
       - run: npm test
       - run: npx lerna bootstrap 
@@ -85,11 +86,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      # Cache to be implemented on next CI change
       - uses: actions/setup-node@v3
         with:
-          node-version: 15
-          cache: 'npm'
-          cache-dependency-path: subdir/package-lock.json
+          node-version: "16.x"
+          # cache: 'npm'
+          # cache-dependency-path: subdir/package-lock.json
       - run: npx lerna bootstrap
       - run: npm run ci:publish
         env:
