--- a/lerna.json
+++ b/lerna.json
@@ -2,9 +2,9 @@
   "packages": [
     "packages/*"
   ],
-  "npmClient": "yarn",
+  "npmClient": "npm",
   "useWorkspaces": true,
-  "version": "0.6.42",
+  "version": "0.6.45",
   "command": {
     "publish": {
       "verifyAccess": false
