--- a/packages/esm-form-render-app/package.json
+++ b/packages/esm-form-render-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openmrs-esm-ohri-form-render-app",
-  "version": "0.6.42-pre.67-pre.1567",
+  "version": "0.6.43-pre.0",
   "description": "A Forms Rendering microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-esm-ohri-form-render-app.js",
   "main": "src/index.ts",
