--- a/packages/esm-ohri-core-app/package.json
+++ b/packages/esm-ohri-core-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openmrs-esm-ohri-core-app",
+  "name": "@ohri/openmrs-esm-ohri-core-app",
   "version": "0.6.45",
   "description": "A custom microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/ohri-core-app.js",
