--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openmrs-esm-ohri-commons-lib",
+  "name": "@ohri/openmrs-esm-ohri-commons-lib",
   "version": "0.6.45",
   "description": "Commons library for shared assets for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/ohri-commons-lib.js",
