--- a/packages/esm-form-render-app/package.json
+++ b/packages/esm-form-render-app/package.json
@@ -65,7 +65,7 @@
     "yup": "^0.29.1"
   },
   "devDependencies": {
-    "@ohri/openmrs-ohri-form-engine-lib": "next",
+    "@ohri/openmrs-ohri-form-engine-lib": "1.x",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
