--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@carbon/icons-react": "^10.49.0",
+    "@ohri/openmrs-ohri-form-engine-lib": "^1.0.0-pre.118",
     "ace-builds": "^1.4.14",
     "carbon-components-react": "^7.56.0",
     "enzyme": "^3.11.0",
@@ -48,7 +49,6 @@
     "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.3",
-    "@ohri/openmrs-ohri-form-engine-lib": "1.x",
     "react-ace": "^9.4.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-markdown": "^7.1.0",
