--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "coverage": "yarn test --coverage",
     "extract-translations": "lerna run extract-translations",
     "prettier": "prettier --config prettier.config.js --write \"packages/**/*.{ts,tsx}\"",
-    "start": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources 'packages/esm-*-app/'",
+    "start": "openmrs develop --backend https://ohri-working.globalhealthapp.net --sources 'packages/esm-*-app/'",
     "start:core": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-ohri-core-app",
     "start:covid": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-covid-app",
     "start:hiv": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-hiv-app",
@@ -42,8 +42,6 @@
     "@carbon/react": "^1.13.0",
     "@ohri/openmrs-ohri-form-engine-lib": "^1.0.0-pre.118",
     "ace-builds": "^1.4.14",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "formik": "^2.2.6",
     "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
@@ -65,7 +63,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.17.9",
-    "@openmrs/esm-framework": "4.x",
+    "@openmrs/esm-framework": "^4.0.2",
     "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -88,27 +86,33 @@
     "concurrently": "^6.3.0",
     "css-loader": "^3.2.0",
     "dayjs": "^1.11.1",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.13.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-config-ts-react-important-stuff": "^3.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.3.1",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.5.1",
-    "husky": "^3.0.4",
-    "i18next": "^19.4.2",
+    "husky": "^6.0.0",
+    "i18next": "^19.7.0",
+    "i18next-parser": "^5.4.0",
     "identity-obj-proxy": "^3.0.0",
     "istanbul-badges-readme": "^1.4.0",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
+    "jest": "^28.1.2",
+    "jest-cli": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "lerna": "^4.0.0",
-    "openmrs": "4.x",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1",
+    "lodash": "^4.17.21",
+    "openmrs": "^4.0.2",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
-    "rxjs": "^6.6.2",
+    "rxjs": "^6.6.3",
     "sass": "^1.54.3",
+    "swr": "^1.1.2",
     "systemjs-webpack-interop": "^2.3.7",
     "typescript": "^4.6.3",
     "unistore": "^3.5.2",
@@ -121,5 +125,6 @@
   "resolutions": {
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5"
-  }
+  },
+  "packageManager": "yarn@3.2.2"
 }
