--- a/packages/esm-cervical-cancer-app/package.json
+++ b/packages/esm-cervical-cancer-app/package.json
@@ -41,24 +41,19 @@
   },
   "dependencies": {
     "@carbon/react": "^1.13.0",
-    "ace-builds": "^1.4.12",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "formik": "^2.2.6",
     "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
-    "react-test-renderer": "^16.9.0",
-    "semver": "^7.3.5",
-    "systemjs-webpack-interop": "^2.3.7",
-    "yup": "^0.29.1"
+    "systemjs-webpack-interop": "^2.3.7"
   },
   "peerDependencies": {
     "@openmrs/esm-framework": "4.x",
     "@openmrs/esm-patient-common-lib": "4.x",
     "dayjs": "^1.8.16",
     "react": "^18.2.0",
-    "react-i18next": "^11.7.0",
+    "react-i18next": "^11.18.6",
     "swr": "^1.1.2"
   },
   "devDependencies": {
@@ -70,23 +65,15 @@
     "@babel/runtime": "^7.17.8",
     "@openmrs/esm-framework": "4.x",
     "@openmrs/esm-patient-common-lib": "4.x",
-    "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.161",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack-env": "^1.15.1",
-    "@types/yup": "^0.29.3",
     "@typescript-eslint/parser": "^4.26.0",
-    "babel-eslint": "^10.0.2",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.2.4",
-    "babel-preset-minify": "^0.5.1",
     "browserslist-config-openmrs": "^1.0.0",
     "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^6.3.0",
-    "css-loader": "^3.2.0",
     "dayjs": "^1.8.16",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.13.0",
@@ -94,27 +81,9 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.3.3",
     "husky": "^3.0.4",
     "i18next": "^19.4.2",
-    "identity-obj-proxy": "^3.0.0",
-    "istanbul-badges-readme": "^1.4.0",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "openmrs": "4.x",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.6",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
     "rxjs": "^6.6.2",
-    "sass": "^1.54.3",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.0.0",
-    "swr": "^1.1.2",
     "typescript": "^4.6.3",
     "unistore": "^3.5.2"
   }
