--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -42,16 +42,10 @@
   "dependencies": {
     "@carbon/react": "^1.13.0",
     "@ohri/openmrs-ohri-form-engine-lib": "^1.0.0-pre.118",
-    "ace-builds": "^1.4.14",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "formik": "^2.2.6",
-    "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.3",
     "semver": "^7.3.7",
     "systemjs-webpack-interop": "^2.3.7",
-    "user": "^0.0.0",
     "yup": "^0.29.1"
   },
   "peerDependencies": {
@@ -62,6 +56,8 @@
     "react-i18next": "^11.18.6"
   },
   "devDependencies": {
-    "@openmrs/esm-patient-common-lib": "4.x"
+    "@openmrs/esm-patient-common-lib": "4.x",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6"
   }
 }
