--- a/packages/esm-cervical-cancer-app/package.json
+++ b/packages/esm-cervical-cancer-app/package.json
@@ -1,21 +1,20 @@
 {
   "name": "@ohri/openmrs-esm-ohri-cervical-cancer-app",
   "version": "1.0.0",
-  "description": "A custom microfrontend for cervical cancer for OpenMRS HIV Reference Implementation (OHRI)",
+  "description": "Cervical cancer microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-esm-ohri-cervical-cancer-app.js",
   "main": "src/index.ts",
   "license": "MIT",
   "homepage": "https://github.com/UCSF-IGHS/openmrs-esm-ohri#readme",
   "scripts": {
+    "start": "openmrs develop",
+    "serve": "webpack serve --mode=development",
+    "debug": "npm run serve",
     "build": "webpack --mode production",
     "analyze": "webpack --mode=production --env.analyze=true",
     "lint": "eslint src --ext tsx",
-    "prettier": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\"",
     "typescript": "tsc",
-    "prepublishOnly": "npm run build",
-    "test": "jest --config ./jest.config.js --passWithNoTests",
-    "coverage": "npm test -- --coverage",
-    "badges": "npm run coverage && jest-coverage-badges --output './badges' "
+    "prepublishOnly": "npm run build"
   },
   "browserslist": [
     "extends browserslist-config-openmrs"
@@ -26,12 +25,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && concurrently 'npm:test' 'npm:typescript' 'npm:lint'"
-    }
-  },
-  "gitHead": "5028fd4428bcee71b898cfbaee1acb7e7d0acb15",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/UCSF-IGHS/openmrs-esm-ohri.git"
@@ -40,13 +33,7 @@
     "url": "https://github.com/UCSF-IGHS/openmrs-esm-ohri/issues"
   },
   "dependencies": {
-    "@carbon/react": "^1.13.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "jest-coverage-badges": "^1.0.0",
-    "lodash-es": "^4.17.15",
-    "moment": "^2.29.1",
-    "systemjs-webpack-interop": "^2.3.7"
+    "@carbon/react": "^1.13.0"
   },
   "peerDependencies": {
     "@openmrs/esm-framework": "4.x",
@@ -55,36 +42,5 @@
     "react": "^18.2.0",
     "react-i18next": "^11.18.6",
     "swr": "^1.1.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime": "^7.17.8",
-    "@openmrs/esm-framework": "4.x",
-    "@openmrs/esm-patient-common-lib": "4.x",
-    "@types/lodash": "^4.14.161",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-router": "^5.1.18",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/webpack-env": "^1.15.1",
-    "@typescript-eslint/parser": "^4.26.0",
-    "browserslist-config-openmrs": "^1.0.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "dayjs": "^1.8.16",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-config-ts-react-important-stuff": "^3.0.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^3.0.4",
-    "i18next": "^19.4.2",
-    "rxjs": "^6.6.2",
-    "typescript": "^4.6.3",
-    "unistore": "^3.5.2"
   }
 }
