--- a/packages/esm-form-render-app/package.json
+++ b/packages/esm-form-render-app/package.json
@@ -17,30 +17,20 @@
     "url": "git+https://github.com/UCSF-IGHS/openmrs-esm-ohri.git"
   },
   "scripts": {
-    "analyze": "webpack --mode=production --env.analyze=true",
-    "badges": "npm run coverage && jest-coverage-badges --output './badges' ",
-    "build": "webpack --mode production",
-    "coverage": "npm test -- --coverage",
+    "start": "openmrs develop --backend https://ohri-working.globalhealthapp.net",
+    "serve": "webpack serve --mode=development",
     "debug": "npm run serve",
+    "build": "webpack --mode production",
+    "analyze": "webpack --mode=production --env.analyze=true",
     "docker": "docker run -p 8080:8080 -p 8081:8081 histacohri/docker-openmrs-esm-ohri:1.0 npx openmrs develop --backend https://ohri-working.globalhealthapp.net",
     "docker:dev": "docker compose up",
     "lint": "eslint src --ext tsx",
-    "prepublishOnly": "npm run build",
-    "prettier": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\"",
-    "serve": "webpack serve --mode=development",
-    "start": "openmrs develop --backend https://ohri-working.globalhealthapp.net",
-    "test": "jest --config ../../jest.config.js --passWithNoTests",
-    "typescript": "tsc"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && concurrently 'npm:test' 'npm:typescript' 'npm:lint'"
-    }
+    "typescript": "tsc",
+    "prepublishOnly": "npm run build"
   },
   "browserslist": [
     "extends browserslist-config-openmrs"
   ],
-  "gitHead": "5028fd4428bcee71b898cfbaee1acb7e7d0acb15",
   "publishConfig": {
     "access": "public"
   },
@@ -56,26 +46,18 @@
     "react-scroll": "^1.8.2",
     "react-test-renderer": "^16.9.0",
     "react-waypoint": "^10.1.0",
-    "systemjs-webpack-interop": "^2.3.7",
     "yup": "^0.29.1"
+  },
+  "peerDependencies": {
+    "@openmrs/esm-framework": "4.x",
+    "dayjs": "^1.8.16",
+    "react": "^18.2.0",
+    "react-i18next": "^11.18.6"
   },
   "devDependencies": {
     "@ohri/openmrs-ohri-form-engine-lib": "^1.0.0-pre.118",
-    "babel-eslint": "^10.0.2",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
     "browserslist-config-openmrs": "^1.0.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^6.3.0",
-    "css-loader": "^3.2.0",
-    "dayjs": "^1.8.16",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-config-ts-react-important-stuff": "^3.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.3.3",
-    "husky": "^3.0.4",
     "i18next": "^19.4.2",
     "identity-obj-proxy": "^3.0.0",
     "istanbul-badges-readme": "^1.4.0",
@@ -85,16 +67,6 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "rxjs": "^6.6.2",
-    "unistore": "^3.5.2",
-    "webpack": "^5.74.0",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
-  },
-  "peerDependencies": {
-    "@openmrs/esm-framework": "4.x",
-    "dayjs": "^1.8.16",
-    "react": "^18.2.0",
-    "react-i18next": "^11.18.6"
+    "unistore": "^3.5.2"
   }
 }
