--- a/packages/esm-hiv-app/package.json
+++ b/packages/esm-hiv-app/package.json
@@ -13,12 +13,8 @@
     "build": "webpack --mode production",
     "analyze": "webpack --mode=production --env.analyze=true",
     "lint": "eslint src --ext tsx",
-    "prettier": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\"",
     "typescript": "tsc",
-    "prepublishOnly": "npm run build",
-    "test": "jest --config ./jest.config.js --passWithNoTests",
-    "coverage": "npm test -- --coverage",
-    "badges": "npm run coverage && jest-coverage-badges --output './badges' "
+    "prepublishOnly": "npm run build"
   },
   "browserslist": [
     "extends browserslist-config-openmrs"
@@ -29,11 +25,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && concurrently 'npm:test' 'npm:typescript' 'npm:lint'"
-    }
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/UCSF-IGHS/openmrs-esm-ohri.git"
@@ -41,13 +32,10 @@
   "bugs": {
     "url": "https://github.com/UCSF-IGHS/openmrs-esm-ohri/issues"
   },
-  "gitHead": "5028fd4428bcee71b898cfbaee1acb7e7d0acb15",
   "dependencies": {
     "@carbon/react": "^1.13.0",
     "lodash-es": "^4.17.15",
-    "moment": "^2.29.1",
-    "systemjs-webpack-interop": "^2.3.7",
-    "yup": "^0.29.1"
+    "moment": "^2.29.1"
   },
   "peerDependencies": {
     "@openmrs/esm-framework": "4.x",
@@ -56,61 +44,5 @@
     "react": "^18.2.0",
     "react-i18next": "^11.7.0",
     "swr": "^1.1.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime": "^7.17.8",
-    "@openmrs/esm-framework": "4.x",
-    "@openmrs/esm-patient-common-lib": "4.x",
-    "@types/lodash": "^4.14.161",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-router": "^5.1.18",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/webpack-env": "^1.15.1",
-    "@types/yup": "^0.29.3",
-    "@typescript-eslint/parser": "^4.26.0",
-    "babel-eslint": "^10.0.2",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.2.4",
-    "babel-preset-minify": "^0.5.1",
-    "browserslist-config-openmrs": "^1.0.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^6.3.0",
-    "css-loader": "^3.2.0",
-    "dayjs": "^1.8.16",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-config-ts-react-important-stuff": "^3.0.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.3.3",
-    "husky": "^3.0.4",
-    "i18next": "^19.4.2",
-    "identity-obj-proxy": "^3.0.0",
-    "istanbul-badges-readme": "^1.4.0",
-    "openmrs": "4.x",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.6",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "rxjs": "^6.6.2",
-    "sass": "^1.54.3",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.0.0",
-    "swr": "^1.1.2",
-    "typescript": "^4.6.3",
-    "unistore": "^3.5.2",
-    "webpack": "^5.37.0",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^4.2.1"
   }
 }
