--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@openmrs/esm-patient-common-lib": "4.x",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6"
+    "enzyme-adapter-react-16": "^1.15.6",
+    "webpack": "^5.74.0"
   }
 }
