--- a/packages/esm-ohri-core-app/package.json
+++ b/packages/esm-ohri-core-app/package.json
@@ -42,6 +42,7 @@
     "@openmrs/esm-patient-common-lib": "4.x",
     "dayjs": "^1.8.16",
     "react": "^18.2.0",
-    "react-i18next": "^11.7.0"
+    "react-i18next": "^11.7.0",
+    "webpack": "^5.74.0"
   }
 }
